# cmake-template

./: .gitignore  CMakeLists.txt  README.md  autogen.sh
include/template/: template.h
include/template/internal/: template.h.tmp  template_internal.h
src/: template.c
